--- a/Program/Program.WebApi/Program.WebApi.csproj
+++ b/Program/Program.WebApi/Program.WebApi.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Buyer.cs" />
     <Compile Include="Models\FootballPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
