MULTILAYERS(GET and GET ALL done)

--- a/Program/Program.WebApi/Program.WebApi.csproj
+++ b/Program/Program.WebApi/Program.WebApi.csproj
@@ -156,13 +156,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\PlayerController.cs" />
+    <Compile Include="Controllers\BuyerController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Buyer.cs" />
-    <Compile Include="Models\FootballPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -233,6 +231,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js.map" />
@@ -304,6 +303,16 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Program.Model\Program.Model.csproj">
+      <Project>{308A353B-DBDF-47A5-9737-4333806E53F0}</Project>
+      <Name>Program.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Program.Service\Program.Service.csproj">
+      <Project>{C5E463B6-88CC-4951-9A4B-08A264858463}</Project>
+      <Name>Program.Service</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
