--- a/Program/Program.WebApi/Web.config
+++ b/Program/Program.WebApi/Web.config
@@ -105,4 +105,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="BuyerContext" connectionString="data source=st-07\MSSQLSERVER01;initial catalog=ZadatakGPP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
