--- a/Program/Program.MVC/Program.MVC.csproj
+++ b/Program/Program.MVC/Program.MVC.csproj
@@ -161,7 +161,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BuyerListViewModel.cs" />
+    <Compile Include="Models\BuyerCreateView.cs" />
     <Compile Include="Models\BuyerViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -217,6 +217,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Buyer\GetAllBuyersAsync.cshtml" />
+    <Content Include="Views\Buyer\GetBuyerAsync.cshtml" />
+    <Content Include="Views\Buyer\AddBuyerAsync.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
